tests/neg/i9310.scala
//AE-d101cfe6d25117a51897609e673f6c8e74d31e6e
val foo @ this = 0
class Foo {
  foo { } // error
}